data/all_generated_tests/raw_wast_tests/br_InvalidorInconsistentControlFlowGraph_827.wast
;; 8. **Test for Forward Branch Operand Requirements:**    - **Description**: Forward branch to blocks/if structures ensuring operands are correctly placed on operand stack.    - **Constraint Checked**: Forward branches handling operand requirements accurately.    - **Relation to CFG**: Ensures forward branching maintains operand consistency in CFG.

(assert_invalid
  (module
    (func $test_forward_branch_operands
      (block $outer (result i32)  ;; Label 0
        (block $inner  ;; Label 1
          (i32.const 42)  ;; Operand stack
          (br 0)
        )
        ;; Should resume here with i32 from the operand stack
        (i32.const 0)  ;; Enforce type constraint
      )
    )
  )
  "type mismatch"
)